--- a/index.html
+++ b/index.html
@@ -1,7 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Web Page</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Sheng-Ping Liang</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="profile-container">
+        <div class="profile-card">
+            <img src="profile.jpg" alt="Profile Picture" class="profile-img">
+            <h1 id="name">Sheng</h1>
+            <p id="title">Scientist/Software Developer</p>
+            <p id="bio">
+                
+            </p>
+            <button onclick="toggleContact()">Contact Info</button>
+            <div id="contact-info" class="hidden">
+                <p>Email: sheng.liang@aptitudemedical.com</p>
+                <p>LinkedIn: <a href="https://linkedin.com/in/shengpingliang" target="_blank">linkedin.com/in/shengpingliang</a></p>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
